2006-11-13  Albert Chu <chu11@llnl.gov>

	* configure.ac, freeipmi.spec.in: Prepare for release.

	* Release-0_3_0
	
2006-11-09  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: updated copying
	section as per latest GNU Evaluation Team's recommendation.
	
	* doc/permissions.texi: removed.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: Various updates.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Fix URL for release.

	* Tagged Release-0_3_0-beta0
	
2006-11-06  Albert Chu <chu11@llnl.gov>

	* NEWS: Split news for users and developers.

	* commons/rc/Makefile.am: Dist missing .h files.

2006-11-06 Anand V. Avati <avati@zresearch.com>

	* bmc-config/src/bmc-config-api.c:
	free fiid_obj after using to get max_channel_users_id

	* bmc-config/src/bmc-config.c:
	free argugments.filename if exists after using it

	* common/src/ipmi-sdr-api.c:
	use getpwuid_r in _get_home_directory() instead of getpwuid
	to avoid mem leak

	* ipmi-sel/src/ipmi-sel.c:
	free sdr_record_list in run_cmd_args after its use
	
2006-11-06  Albert Chu <chu11@llnl.gov>

	* configure.ac, Makefile.am, freeipmi.spec.in, ipmi-pef/: Remove
	ipmi-pef for 0.3.0 release line.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* Tagged Release-0_3_0_base.

	* Branched Release-0_3_0_branch.

2006-11-05  Albert Chu <chu11@llnl.gov>

	* ipmipower/src: Move common files to common/src.

	* common/src/Makefile.am, ipmipower/src/Makefile.am: Update for
	new common files library.

        * ipmiconsole/: New library and code.
	
	* doc/freeipmi.texi, Makefile.am, configure.ac, freeipmi.spec.in:
	Updated appropriately for new ipmiconsole code.
	
2006-11-03  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/Makefile.am, ipmiping/src/Makefile.am,
	rmcpping/src/Makefile.am, bmc-watchdog/src/Makefile.am,
	bmc-info/src/Makefile.am, doc/examples/Makefile.am,
	ipmi-locate/src/Makefile.am, ipmi-pef/src/Makefile.am,