@@ -42,6 +42,7 @@
 #define IPMI_SDR_ANALOG_DATA_FORMAT_UNSIGNED      0x0
 #define IPMI_SDR_ANALOG_DATA_FORMAT_1S_COMPLEMENT 0x1
 #define IPMI_SDR_ANALOG_DATA_FORMAT_2S_COMPLEMENT 0x2
+#define IPMI_SDR_ANALOG_DATA_FORMAT_NOT_ANALOG    0x3
 
 #define IPMI_SDR_ANALOG_DATA_FORMAT_VALID(__val) \
    (((__val) == IPMI_SDR_ANALOG_DATA_FORMAT_UNSIGNED \
